samples/_failures_safe/1761731955_209125_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2880a689.c: In function ‘main’:
./samples/SAFE/__tmp_2880a689.c:139:9: error: expected declaration or statement at end of input
  139 |         printf("Memory allocation failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_2880a689.c:139:9: error: expected declaration or statement at end of input
